CHANGES IN VERSION 1.32
-----------------------

BUG FIXES AND MINOR IMPROVEMENTS

    o (1.31.27) Update and clean up unit tests.
    o (1.31.26) Improve load test for the package being checked.
    o (1.31.25) Exclude GitHub URLs that end in HTML from external data check.
    o (1.31.23) Internal updates to the `require` and `library` check.
    o (1.31.22) Remove old code related to running `BiocCheck` on the command
    line and update `BiocCheck` documentation.
    o (1.31.21) Remove redundant `=` from message to avoid `=` assignment.
    o (1.31.20) Add line feed to "Checking function lengths..." message
    o (1.31.18) Packages should not download files when loaded or attached.
    o (1.31.17) Using '=' for assignment should be avoided and '<-' should be
    used instead for clarity and legibility.
    o (1.31.16) Note the use of `cat` and `print` outside of show methods.
    o (1.31.15) Check for pinned package versions in the `DESCRIPTION` file
    denoted by the use of `==`.
    o (1.31.14) Enhancements to internal helper functions and
    `BiocCheckGitClone`
    o (1.31.13) Revert move to new package checks. Update Bioc-devel mailing
    list check to fail early when not in BBS environment.
    o (1.31.12) Move Bioc-devel mailing list and support site registration
    checks to new package checks.
    o (1.31.10) Various internal improvements to `BiocCheck` and the
    identification of the package directory and name.
    o (1.31.6) Use a more reliable approach to identify package name from the
    `DESCRIPTION` file.
    o (1.31.5) Fixed bug in the case where the `VignetteBuilder` field in the
    a package's `DESCRIPTION` has more than one listed.
    o (1.31.3) Add `BioCbooks` repository url to
    `checkIsPackageNameAlreadyInUse`, `VIEWS` file is pending.
    o (1.31.2) Fix logical length > 1 error in `checkImportSuggestions`
      (@vjcitn, #141)
    o (1.31.1) Simplify check for function lengths; remove excessive dots.

CHANGES IN VERSION 1.30