@@ -3,6 +3,8 @@ CHANGES IN VERSION 1.32
 
 BUG FIXES AND MINOR IMPROVEMENTS
 
+    o (1.31.29) Include other import fields from NAMESPACE file when checking
+    consistency between imports in DESCRIPTION/NAMESPACE.
     o (1.31.27) Update and clean up unit tests.
     o (1.31.26) Improve load test for the package being checked.
     o (1.31.25) Exclude GitHub URLs that end in HTML from external data check.
